<resources>
    <string name="app_name">DrivingLicenseQuiz</string>
    <string name="splashTitle">TRẮC NGHIỆM THI LÁI XE</string>
    <string name="homeScreenTitle">Bằng Lái Xe</string>
    <string name="trafficSigns">Biển báo</string>
    <string name="makeQuiz">Thi sát hạch</string>
    <string name="theory">Lý thuyết</string>
    <string name="tips">Mẹo</string>
    <string name="answer">Đáp án</string>
    <string name="examNumber">Đề số</string>
    <string name="answer_1">1</string>
    <string name="answer_2">2</string>
    <string name="answer_3">3</string>
    <string name="answer_4">4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="b1B2Title">Kinh nghiệm thực hành B1-B2</string>
    <string name="b1B2examExperience">KINH NGHIỆM THI</string>
    <string name="b1B2Exercise1">Bài 1 - Xuất phát:</string>
    <string name="b1B2Ex1Content">Trước lúc lên xe tập lái bạn cần:\nKiểm tra, nếu cần chỉnh lại ghế ngồi cho phù hợp với mình để thực hiện các thao tác lái, côn, phanh, ga,... được dễ dàng.\nKiểm tra 2 gương sao cho thấy được điểm bánh xe sau tiếp xúc với mặt đường. Cài dây an toàn, để máy nổ và chờ lệnh xuất phát.\nKhi có lệnh xuất phát, bạn thực hiện như sau:\n - Bật đèn xi nhan trái.\n - Vào số 1, nhả côn từ từ để xe đi.\n - Khi qua vạch xuất phát khoảng 5m thì tắt xi nhan.\n - Khi xe đã đi bạn có thể nhả hết côn cho xe tự chạy, không cần đạp ga. Và đi đến bài số 2.\nCác lỗi bị trừ điểm:\n1. Không thắt dây an toàn, bị trừ 5 điểm.\n2. Không bật đèn xi nhan trái khi xuất phát trừ 5 điểm.\n3. Không tắt đèn xi nhan trái ở khoảng cách 5m sau vạch xuất phát (đèn xanh trên xe tắt), trừ 5 điểm.\n4. Không bật và tắt xi nhan trái kịp thời, bị trừ 5 điểm.\n5. Quá 20 giây kể từ khi có hiệu lệnh xuất phát (đèn xanh trên xe đã bật sáng) mà vẫn không đi qua vạch xuất phát, bị trừ 5 điểm.\n6. Để xe chết máy, bị trừ 5 điểm/1 lần.\n7. Để tốc độ động cơ quá 4000 vòng/phút, trừ 5 điểm.\n8. Lái xe vượt tốc độ quy định, trừ 5 điểm.\nBị loại khỏi trường thi khi:\n1. Quá 10 giây kể từ khi có lệnh xuất phát (đèn xanh trên xe bật sáng) mà xe vẫn chưa vượt vạch xuất phát.\n2. Xử lí tình huống không hợp lý gây tai nạn: bị truất quyền thi.\n</string>
    <string name="b1B2Exercise2">Bài 2 - Dừng xe nhường đường cho người đi bộ:</string>
    <string name="b1B2Ex2Content">Yêu cầu là bạn phải dừng xe đúng chỗ trước vạch trắng và đường dành cho người đi bộ (sọc ngựa vằn). Cản xe phía trước cách vạch dừng không quá 0,5m.\nĐỗ già quá (chạm vạch trắng) hoặc non quá (xa vạch trắng) đều bị trừ 5 điểm.\nCác sân tập đã có sẵn vạch trên cọc biển báo hiệu. Khi vai người lái hoặc chốt cửa đến ngang cọc đó thì phải dừng lại.\nKhi xe vừa tới vị trí thì đạp côn và phanh xe dừng lại (nếu không cắt côn trước có thể xe sẽ chết máy).\nDừng xe xong, bạn nhả côn cho xe đi tiếp. Dừng lâu quá 30s sẽ bị trừ điểm.\nCác lỗi bị trừ điểm:\n1. Không dừng xe ở vạch quy định, bị trừ 5 điểm.\n2. Dừng xe chưa đến vạch dừng quy định, bị trừ 5 điểm.\n3. Dừng xe quá vạch dừng quy định, bị trừ 5 điểm.\n4. Lái xe trên vỉa hè bị truất quyền thi.\n5. Xử lý tình huống không hợp lý gây tai nạn bị truất quyền thi.\n6. Lái xe bị chết máy, lỗi một lần bị trừ 5 điểm.\n7. Để tốc độ động cơ quá 4000 vòng/phút, cứ 3 giây bị trừ 1 điểm.\n Các lỗi bị loại:\n1. Quá 30 giây mà xe vẫn chưa vượt vạch xuất phát.\n2. Gây tai nạn.\n</string>
    <string name="b1B2Exercise3">Bài 3 - Dừng xe khởi hành trên dốc lên:</string>
    <string name="b1B2Ex3Content">Yêu cầu của bài này là xe không vượt quá vạch đích quy định, không bị tuột dốc quá 50cm, phải vượt khỏi dốc trong khoảng thời gian 30s (nếu không sẽ bị loại).\nKhông được tăng ga quá lớn (số vòng quay động cơ trên 4000 vòng/phút).\nSau khi vượt qua bài 2, bạn nhả hết côn, phanh cho xe tự bò lên dốc. Về bản chất, bài này giống bài 2 ở chỗ dừng xe rồi lại đi tiếp: nhưng vì xe đang ở trên dốc nên chịu lực kéo trôi ngược về chân dốc, nếu bỏ phanh chân thì xe sẽ trôi. Do vậy cách xử lý ở bài 3 khác bài 2. Có 2 cách:\n-Cách 1: Là cách dạy chính thống trong trường. Sau khi xe đã dừng trên dốc, bạn kéo phanh tay với mục đích là thay phanh chân, giữ xe tại điểm dừng. Khi đó, bạn có thể bỏ chân phanh ra và đặt vào chân ga mớm lên. Đồng thời chân trái thả côn từ từ, đến khi thấy tay lái hoặc cần số rung lên báo hiệu các lá côn đã cắt vào nhau thì nhả nhẹ phanh tay, nghe ngóng nếu thấy xe không bị trôi, tụt thì bỏ phanh tay, xe sẽ tự bò lên.\n- Cách 2: Là cách các lái già thường làm trong thực tế, không dùng đến phanh tay.\nSau khi căn cho vai hoặc núm cửa gần tới ngang cọc biển báo vạch dừng xe thì bạn đạp côn, thắng dừng xe.\nSau đó bạn nhả côn từ từ, đến khi thấy tay lái hoặc cần số rung thì nhả phanh chân, nghe ngóng, nếu thấy xe trôi thì đạp phanh chân vào, làm lại. Nếu thấy xe không trôi thì thả cho hết phanh chân, xe sẽ tự bò lên. Nếu nhả hết phanh chân mà xe vẫn đứng yên thì tiếp vào chân ga một chút đồng thời hơi nhả côn ra thêm (chú ý nếu nhả côn nhanh quá xe sẽ tắt máy - bị trừ điểm), khi này bạn phải nhanh chóng đề máy lại và tiếp tục bài thi.\n</string>
    <string name="b1B2Exercise4">Bài 4 - Đi xe qua hàng đinh vuông góc - chữ Z:</string>
    <string name="b1B2Ex4Content">Yêu cầu của bài này là 2 bánh xe bên phải phải đi lọt qua một vạch đường có bề rộng khoảng 30-35cm (dấu B). Mỗi lần bánh xe chạm vạch sẽ bị trừ 5 điểm, bánh xe đè vạch cứ 5s bị trừ 5 điểm (quá 2 phút chưa qua bài bị trừ 5 điểm). Khi rẽ vào đường hàng đinh bạn nên đánh lái muộn một chút để xe áp sát lề đường bên phải. Đi thật chậm và nhìn gương phải để quan sát bánh xe phía sau. Các sân thi cũng như sân tập thường kẻ sẵn vạch dẫn đường. Vạch này bằng mép ngoài hàng đinh, vì vậy nếu bánh xe cách vạch đó khoảng 10-15cm thì xe sẽ đi qua hàng đinh mà không chạm mép 2 bên.\nNgoài việc nhìn gương phải, bạn phải căn và bám vào một điểm mốc ở phía trước, thường là một vạch đánh dấu trên lề đường trước mặt vì có khi lúc đầu xe đi đúng khoảng cách với vạch căn bên phải nhưng sau đó do giữ lái không tốt nên xe bị chệch hướng (chú ý nếu bánh xe bên phải đi ngoài hàng đinh thì sẽ bị loại).\nSau khi đi qua hàng đinh, bạn thấy gương chiếu hậu ngang với góc bên trái thì đánh hết lái sang trái, đồng thời quan sát gương chiếu hậu và trả lái phù hợp để thành xe song song với vạch giới hạn và cách 30-40cm khi song song thì trả thắng lái tiến đến góc vuông thứ 2. Quan sát khi thấy gương chiếu hậu bên phải ngang với góc thứ 2, đánh hết lái sang phải và trả thắng lái tiến ra khỏi hình. Để có thể đánh hết lái và trả thẳng lái cho nhanh, trong quá trình học bạn nên tập thuần thục động tác...quay tay! (xoay vô lăng).\nĐặc biện chú ý trong bài này phải vê côn để xe đi thật chậm mới đánh lái kịp.\n</string>
    <string name="b1B2Exercise5">Bài 5 - Qua ngõ 4 có tín hiệu điều khiển giao thông:</string>
    <string name="b1B2Ex5Content">Yêu cầu phải chấp hành nghiêm tính hiệu giao thông, dừng xe cách vạch dừng quy định không quá 0,5m, đi ngang ngã 4 trong thời gian 20s, nếu:\n- Đi qua ngã 4 khi đèn đỏ bị trừ 10 điểm.\n-Dừng xe cách vạch hoặc quá vạch trên 0,5m bị trừ 5 điểm, chết máy mỗi lần trừ 5 điểm.\n- Không bật xi nhan trái qua ngã 4 rẽ trái, xi nhan phải khi qua ngã 4 rẽ phải bị trừ 5 điểm.\n- Không thực hiện đúng quy trình bài thi bị trừ 5 điểm.\n- Tốc độ vòng quay quá 4000 vòng/phút thì cứ 3s bị trừ 1 điểm.\n</string>
    <string name="b1B2Exercise6">Bài 6 - Đi xe qua đường vòng quanh co (chữ S):</string>
    <string name="b1B2Ex6Content">Yêu cầu giống bài 5 (mỗi lần bánh xe chạm vạch trừ 5 điểm).\nKhác với bạn 5, do chữ S là đường cong liên tục nên bạn phải điều chỉnh tay lái theo đường cong. Nguyên tắc lái xe ở đường cong \"tiến bám lưng, lùi bám bụng\" có nghĩa là: khi xe vào đường cua (ôm cua) nên căn theo phía đường cong dài hơn. Như vậy khi vào đường chữ S bạn cho xe bám sát lề bên phải, đánh lái sang trái cho xe đi nửa vòng cua đầu tiên sau đó lại bám sang lề đường bên trái, trả lái và đánh lái sang phải cho xe qua nốt nửa vòng cua còn lại.\n</string>
    <string name="b1B2Exercise7">Bài 7 - Ghép xe vào nơi đỗ (Lùi vào nhà xe dọc):</string>
    <string name="b1B2Ex7content">Yêu cầu của bài này là trong vòng 2 phút bạn phải cho xe lùi được vào nơi đỗ (nhà xe), không chạm vạch và tiến ra khỏi nhà xe. Các lỗi thường gặp:\n- Mỗi lần bánh xe chạm vạch trừ 5 điểm (mỗi 2 giây).\n- Quá thời gian 2 phút trừ 5 điểm (mỗi 2 phút trừ 5 điểm).\n- Bánh xe không được chạm vạch kiểm tra cuối nhà xe bị loại (máy thông báo).\n- Không hạng xe bị loại (nhầm nhà xe hoặc xe khác).\nKhi bắt đầu rẽ vào khu vực nhà xe, bám sát lề đường bên trái cách khoảng 30-35cm. Đi chậm (số 1) khi vai người lái đi ngang qua cửa nhà xe thì đánh hết lái về bên phải, tiếp tục cho xe tiến lên khi thấy thân xe có góc khoảng 40-45 độ so với đường ngang cửa nhà xe thì trả thẳng lái và dừng lại trước vạch giới hạn. Sau đó nhìn kính chiếu hậu bên trái quan sát phía sau (bánh xe, thân xe và góc nhà xe), xem thế xe rồi vào số lùi, tùy theo thế xe \"lơi\" hay \"dốc\" mà ta đánh tay lái sang trái nhiều hay ít, điều chỉnh sao cho bánh xe sau khi sắp đến góc nhà xe thì đánh nhiều lái sang trái cho xe lùi vào bên trong nhà xe - quan sát thấy thành xe, bánh xe song song với nhà xe và cách vạch giớn hạn 20-30 cm thì trả thẳng lái và lùi vào cho đến khi bánh xe sau đè lên vạch thì dừng lại.\nCài số 1 và tiến ra khỏi nhà xe. Lưu ý khi tiến ra, người phải ra khỏi cửa nhà xe hoặc hơn một chút nữa bạn hãy đánh lái rẽ sang phải để tránh trường hợp bánh sau chưa ra khỏi cửa nhà xe mà đã rẽ sẽ bị chèn vạch, trừ điểm. Nếu lỡ lùi chưa chính xác, đuôi xe cách xa cửa nhà xe, có thể chèn lên vạch hoặc vỉa ba-toa, bạn cứ bình tĩnh về lại số 1, tiến về phía trước, đánh lái sao cho xe ở vào vị trí thẳng cửa nhà xe, sau đó vào số lùi để làm lại việc lùi vào nhà xe (gọi là lùi xe 2 đỏ).\n</string>
    <string name="b1B2Exercise8">Bài 8 - Dừng xe nơi giao nhau với đường sắt:</string>
    <string name="b1B2Ex8Content">Yêu cầu và thực hành của bài này giống bài số 2.\n</string>
    <string name="b1b2FragmentTitle">SƠ ĐỒ THI THỰC HÀNH LÁI XE B1, B2</string>
    <string name="b1b2ContentName">NỘI DUNG 11 BÀI SA HÌNH SÁT HẠCH LÁI XE B1, B2</string>
    <string name="b1b2Content">BÀI 1: Xuất phát\nBÀI 2: Dừng xe nhường đường cho người đi bộ\nBÀI 3: Dừng xe, khởi hành trên dốc\nBÀI 6: Đi qua hàng đinh, qua đường vuông góc\nBÀI 5: Đi xe qua ngã tư có tín hiệu điều khiển\nBÀI 7: Ghép xe dọc vào nơi đỗ\nBÀI 8: Dừng xe nơi giao nhau với đường sắt\nBÀI 9: Tăng tốc, tăng số\nBÀI 10: Ghép xe ngang vào nơi đỗ\nBÀI 11: Kết thúc\n</string>
    <string name="examExperience"><![CDATA[Kinh nghiệm thi >>]]></string>
</resources>