<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:padding="4dp"
        android:id="@+id/tv_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/b1b2FragmentTitle"
        android:textSize="18sp"
        android:textStyle="bold" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/tv_tittle"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:src="@drawable/b1b2" />

    <TextView
        android:padding="4dp"
        android:layout_below="@id/gif_image_view"
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/b1b2ContentName"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:padding="4dp"
        android:id="@+id/tv_content2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_content"
        android:text="@string/b1b2Content"
        android:textSize="16sp" />


    <Button
        android:id="@+id/btn_b1b2_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_content2"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:text="@string/examExperience"
        android:textColor="#3046C1"
        android:textStyle="bold" />

</RelativeLayout>
